# OpenFedBot

./: .gitattributes  .gitignore  Makefile  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_REVIEWER_20260410.md  REVIEWER_GUIDE.md  environment.yml  pyproject.toml  requirements.txt
assets/: README.md
configs/: open_world_bridge_reviewselector_hardest_targeted.json  open_world_bridge_tight_reviewselector_hardest_targeted.json  open_world_centerloss_reviewselector_targeted.json  open_world_full_suite.json  open_world_full_suite_cov60.json  open_world_full_suite_cov60_seed10.json  open_world_full_suite_cov90.json  open_world_full_suite_cov90_seed10.json  open_world_full_suite_hardened_clean_seed10.json  open_world_full_suite_margintrust_clean_seed10.json  open_world_full_suite_margintrust_seed10.json  open_world_full_suite_multiproto_clean_seed10.json  open_world_full_suite_multiproto_coverageswitch_clean_seed10.json  open_world_full_suite_multiproto_coverageswitch_clean_seed10_cov10.json  open_world_full_suite_multiproto_coverageswitch_clean_seed10_cov14.json  open_world_full_suite_multiproto_coverageswitch_clean_seed10_local_graphs.example.json  open_world_full_suite_multiproto_coverageswitch_seed10.json  open_world_full_suite_multiproto_seed10.json  open_world_full_suite_reinforced_seed10.json  open_world_full_suite_reinforced_seed10_local_graphs.example.json  open_world_full_suite_reviewselector_seed10.json  open_world_full_suite_seed10.json  open_world_full_suite_shiftaware_seed10.json  open_world_full_suite_shifttrustgate_clean_seed10.json  open_world_mimic_main.json  (+33 more)
(+68 files in other folders)
