[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openfedbot"
version = "0.1.0"
description = "Deployment-safe open-world federated bot triage experiments"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "numpy==2.2.6",
  "scipy==1.15.3",
  "matplotlib==3.10.8",
  "scikit-learn==1.7.2",
  "networkx==3.4.2",
  "torch==2.10.0",
  "torch-geometric==2.7.0",
]

[tool.setuptools.packages.find]
include = ["openfedbot*"]
